Added btn-to-top + its fn.  Btn added for 'about', 'contact', 'news' pages. Minor html/scss/js changes

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -11,12 +11,16 @@
   <link rel="stylesheet" href="../../fonts/stylesheet.css">
   <link rel="stylesheet" href="/pages/about/css/about.css">
 
+  <script src="../../common-blocks/btn-to-top/btn-to-top.js" defer></script>
   <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
   <script src="../../common-blocks//services/services.js" defer></script>
   <script src="/pages/about/about.js" defer></script>
 </head>
 
 <body>
+  <div class="btn-to-top">
+
+  </div>
   <header class="header">
     <div class="header__upper">
       <button class="header__mobile-btn--open">
