Index page: added resposiveness for header, portfolio sections; added js video and counter fns.

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="../../libs/reset/reset.css">
   <link rel="stylesheet" href="../../libs/swiper/swiper-bundle.min.css">
-  <link rel="stylesheet" href="../../ancillary-styles/fonts.css">
+  <link rel="stylesheet" href="../../fonts/stylesheet.css">
   <link rel="stylesheet" href="scss/index.css">
 
   <script src="../../libs/swiper/swiper-bundle.min.js"></script>
@@ -377,15 +377,15 @@
         </p>
       </div>
       <div class="trends__upper-right">
-        <div class="trends__upper-img">
-        </div>
+        <!-- <div class="trends__upper-img">
+        </div> -->
       </div>
     </div>
     <div class="trends__lower">
       <div class="trends__lower-left">
         <div class="trends__lower-left-wrapper">
           <p class="trends__lower-number">
-            7
+            0
           </p>
           <h2 class="trends__lower-left-title">
             Years Experience
@@ -400,9 +400,13 @@
         <h2 class="trends__lower-right-title">
           WATCH OUR VIDEO
         </h2>
-        <video src="#" class="trends__video">
-          source
-        </video>
+        <div class="trends__video-wrapper">
+          <div class="trends__play-btn">
+          </div>
+          <video class="trends__video" poster="../../images/pages/index-page/trends-section/barn-house.jpg">
+            <source src="../../videos/index/modern-house-1.mp4" type="video/mp4">
+          </video>
+        </div>
       </div>
     </div>
   </section>
@@ -435,28 +439,57 @@
 
       <div class="clients__lower">
         <div class="clients__carousel">
-          <div class="clients__lower--left">
-            <div class="clients__pic clients__pic--first">
+
+          <div class="clients__carousel-slide clients__carousel-slide--first">
+            <div class="clients__lower--left">
+              <div class="clients__pic clients__pic--first">
+              </div>
+              <p class="clients__name">
+                ADAM STONE
+              </p>
+              <p class="clients__text">
+                “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
+                luctus.Lorem ipsum Dolor tusima olatiup”.
+              </p>
             </div>
-            <p class="clients__name">
-              ADAM STONE
-            </p>
-            <p class="clients__text">
-              “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
-              luctus.Lorem ipsum Dolor tusima olatiup”.
-            </p>
-          </div>
-          <div class="clients__lower--right">
-            <div class="clients__pic clients__pic--second">
+            <div class="clients__lower--right">
+              <div class="clients__pic clients__pic--second">
+              </div>
+              <p class="clients__name">
+                REBECCA JOHNS
+              </p>
+              <p class="clients__text">
+                “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
+                luctus.Lorem ipsum Dolor tusima olatiup”.
+              </p>
             </div>
-            <p class="clients__name">
-              ADAM STONE
-            </p>
-            <p class="clients__text">
-              “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
-              luctus.Lorem ipsum Dolor tusima olatiup”.
-            </p>
           </div>
+
+          <div class="clients__carousel-slide clients__carousel-slide--second">
+            <div class="clients__lower--left">
+              <div class="clients__pic clients__pic--third">
+              </div>
+              <p class="clients__name">
+                ANDREW YANG
+              </p>
+              <p class="clients__text">
+                “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
+                luctus.Lorem ipsum Dolor tusima olatiup”.
+              </p>
+            </div>
+            <div class="clients__lower--right">
+              <div class="clients__pic clients__pic--fourth">
+              </div>
+              <p class="clients__name">
+                LIZA WARREN
+              </p>
+              <p class="clients__text">
+                “Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie
+                luctus.Lorem ipsum Dolor tusima olatiup”.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
 
