Index page: added final responsiveness; restructurized js fns.

--- a/pages/index/index.html
+++ b/pages/index/index.html
@@ -417,7 +417,8 @@
         <h3 class="clients__title">
           FROM OUR CLIENTS
         </h3>
-        <div class="clients__arrow-wrapper">
+
+        <!-- <div class="clients__arrow-wrapper">
           <div class="clients__arrow clients__arrow--left">
             <svg width="23" height="43" viewBox="0 0 23 43" fill="#f8f8f8" xmlns="http://www.w3.org/2000/svg">
               <line class="clients__arrow-line" x1="22.2929" y1="41.7071" x2="1.29289" y2="20.7071" stroke="#000"
@@ -434,7 +435,8 @@
                 stroke-width="2" />
             </svg>
           </div>
-        </div>
+        </div> -->
+
       </div>
 
       <div class="clients__lower">
@@ -514,7 +516,7 @@
                   class="news__accordion-arrow news__accordion-arrow--active">
               </div>
             </div>
-            <div class="news__accordion-tab-lower news__accordion-tab--slide-down">
+            <div class="news__accordion-tab-lower news__accordion-tab-lower--active">
               <a href="#" class="news__accordion-link">
                 Explore
               </a>
@@ -525,116 +527,117 @@
             </div>
 
           </div>
-        </div>
+          <!-- </div> -->
 
-        <div class="news__accordion-tab">
-          <div class="news__accordion-tab-upper">
-            <h4 class="news__accordion-title">
-              WELCOME TO OUR NEW SITE
-            </h4>
-            <div class="news__accordion-btn">
-              <img class="news__accordion-arrow" src="../../images/pages/index-page/news-section/accordion-arrow.png"
-                alt="arrow">
+          <div class="news__accordion-tab">
+            <div class="news__accordion-tab-upper">
+              <h4 class="news__accordion-title">
+                WELCOME TO OUR NEW SITE
+              </h4>
+              <div class="news__accordion-btn">
+                <img class="news__accordion-arrow" src="../../images/pages/index-page/news-section/accordion-arrow.png"
+                  alt="arrow">
+              </div>
             </div>
-          </div>
-          <div class="news__accordion-tab-lower">
-            <a href="#" class="news__accordion-link">
-              Explore
-            </a>
-            <p class="news__acccordion-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections 1.10.32 and 1.10.33
-            </p>
-          </div>
-        </div>
-
-        <div class="news__accordion-tab">
-          <div class="news__accordion-tab-upper">
-            <h4 class="news__accordion-title">
-              TRENDING 2021
-            </h4>
-            <div class="news__accordion-btn">
-              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
-                class="news__accordion-arrow">
+            <div class="news__accordion-tab-lower">
+              <a href="#" class="news__accordion-link">
+                Explore
+              </a>
+              <p class="news__acccordion-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33
+              </p>
             </div>
           </div>
 
-          <div class="news__accordion-tab-lower">
-            <a href="#" class="news__accordion-link">
-              Explore
-            </a>
-            <p class="news__acccordion-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections 1.10.32 and 1.10.33
-            </p>
-          </div>
-        </div>
+          <div class="news__accordion-tab">
+            <div class="news__accordion-tab-upper">
+              <h4 class="news__accordion-title">
+                TRENDING 2021
+              </h4>
+              <div class="news__accordion-btn">
+                <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                  class="news__accordion-arrow">
+              </div>
+            </div>
 
-
-        <div class="news__accordion-tab">
-          <div class="news__accordion-tab-upper">
-            <h4 class="news__accordion-title">
-              BEST WOOD FOR TABLES
-            </h4>
-            <div class="news__accordion-btn">
-              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
-                class="news__accordion-arrow">
+            <div class="news__accordion-tab-lower">
+              <a href="#" class="news__accordion-link">
+                Explore
+              </a>
+              <p class="news__acccordion-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33
+              </p>
             </div>
           </div>
 
-          <div class="news__accordion-tab-lower">
-            <a href="#" class="news__accordion-link">
-              Explore
-            </a>
-            <p class="news__acccordion-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections 1.10.32 and 1.10.33
-            </p>
-          </div>
-        </div>
 
-        <div class="news__accordion-tab">
-          <div class="news__accordion-tab-upper">
-            <h4 class="news__accordion-title">
-              NEW CONTACT FORM
-            </h4>
-            <div class="news__accordion-btn">
-              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
-                class="news__accordion-arrow">
+          <div class="news__accordion-tab">
+            <div class="news__accordion-tab-upper">
+              <h4 class="news__accordion-title">
+                BEST WOOD FOR TABLES
+              </h4>
+              <div class="news__accordion-btn">
+                <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                  class="news__accordion-arrow">
+              </div>
+            </div>
+
+            <div class="news__accordion-tab-lower">
+              <a href="#" class="news__accordion-link">
+                Explore
+              </a>
+              <p class="news__acccordion-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33
+              </p>
             </div>
           </div>
 
-          <div class="news__accordion-tab-lower">
-            <a href="#" class="news__accordion-link">
-              Explore
-            </a>
-            <p class="news__acccordion-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections 1.10.32 and 1.10.33
-            </p>
-          </div>
-        </div>
+          <div class="news__accordion-tab">
+            <div class="news__accordion-tab-upper">
+              <h4 class="news__accordion-title">
+                NEW CONTACT FORM
+              </h4>
+              <div class="news__accordion-btn">
+                <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                  class="news__accordion-arrow">
+              </div>
+            </div>
 
-
-        <div class="news__accordion-tab">
-          <div class="news__accordion-tab-upper">
-            <h4 class="news__accordion-title">
-              TRENDING COLORS
-            </h4>
-            <div class="news__accordion-btn">
-              <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
-                class="news__accordion-arrow">
+            <div class="news__accordion-tab-lower">
+              <a href="#" class="news__accordion-link">
+                Explore
+              </a>
+              <p class="news__acccordion-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33
+              </p>
             </div>
           </div>
 
-          <div class="news__accordion-tab-lower">
-            <a href="#" class="news__accordion-link">
-              Explore
-            </a>
-            <p class="news__acccordion-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-              Sections 1.10.32 and 1.10.33
-            </p>
+
+          <div class="news__accordion-tab">
+            <div class="news__accordion-tab-upper">
+              <h4 class="news__accordion-title">
+                TRENDING COLORS
+              </h4>
+              <div class="news__accordion-btn">
+                <img src="../../images/pages/index-page/news-section/accordion-arrow.png" alt="arrow"
+                  class="news__accordion-arrow">
+              </div>
+            </div>
+
+            <div class="news__accordion-tab-lower">
+              <a href="#" class="news__accordion-link">
+                Explore
+              </a>
+              <p class="news__acccordion-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections 1.10.32 and 1.10.33
+              </p>
+            </div>
           </div>
         </div>
 
